--- a/Paula_CV.html
+++ b/Paula_CV.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./Paula_CV.html">
 </head>
     <h1>Ana Paula Garfias</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias nobis magnam impedit harum consectetur magni hic dolorum! Esse perspiciatis fuga accusamus quod laboriosam molestiae consequatur, laudantium hic tempora ea error.</p>
     
 <body>
     
