--- a/Paula_CV.html
+++ b/Paula_CV.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./Paula_CV.html">
 </head>
     <h1>Ana Paula Garfias</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias nobis magnam impedit harum consectetur magni hic dolorum! Esse perspiciatis fuga accusamus quod laboriosam molestiae consequatur, laudantium hic tempora ea error.</p>
+    <img width="300px" max-height="300" src="Image\IMG_8451.jpg" alt="Paula posando seriamente">
+    <p>Me considero una persona proactiva, con grandes interenses en seguirme preparando para el futuro, por ello he tomado cursos de SCRUM y AGILE para mejorar mis habilidades blandas en el trabajo y llevar una mejor organización del mismo. A la par tengo una gran afición por las tecnologías y su funcionalidad en el mundo actual por ello estoy estudiando y preparandome para desenvolverme como ingeniera software con amplios conocimientos en ciencia de datos.</p>
     
 <body>
     
