--- a/Paula_CV.html
+++ b/Paula_CV.html
@@ -20,10 +20,39 @@
             <p>Jr Process Enginner</p>
         <h4>Tasks:</h4>
         <ul>
-            <li></li>
+            <li>FMEA coordinator and moderator for different business unit in Bosch NA.</li>
+            <li>Consultancies for FMEA, IMDS and engineering changes improvements.</li>
+            <li>Project assignation and workload distribution. </li>
+            <li>Support in external and internal audits. </li>
         </ul>
-
-        
+            <i>Periodo: Dic 2022 - PRESENT</i>
+            <h3>BOSCH</h3>
+        <h4>Work position:</h4>
+            <p>Data access analyst</p>
+        <h4>Tasks:</h4>
+        <p>IT Support:</p>
+        <ul>
+            <li>Support on the implementation and compliance of the Central Active Directory of BOSCH, and administration of the assigned departments.</li>
+            <li>Manage requests for access to SAP or NON-SAP systems and administrate associates profiles based on their job position, thus avoiding risks in the company's activities, keeping the information confidential.</li>
+            <li>Creation of mitigating controls to prevent improper use of access in purchasing departments, logistics, etc.</li>
+            <li>Support the registration of applications developed locally.</li>
+        </ul>
+            <i>Periodo: May 2021 - Dic 2022</i>
+    </div>
+    <hr>
+    <div>
+        <h2>Contact</h2>
+        <ul>
+            <li>
+                <a href="https://www.linkedin.com/in/paulagarfias" target="_blank">Linkedin</a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/paulagrfs_/" target="_blank">Instagram</a>
+            </li>
+            <li>
+                <a href="https://github.com/anapaulagarfias" target="_blank">GitHub</a>
+            </li>
+        </ul>
     </div>
 <body>
     
