--- a/Paula_CV.html
+++ b/Paula_CV.html
@@ -6,8 +6,9 @@
     <title>Ana Paula Garfias</title>
     <link rel="stylesheet" href="./Paula_CV.html">
 </head>
-    <h1>Ana Paula Garfias</h1>
-    <img width="300px" max-height="300" src="Image\IMG_8451.jpg" alt="Paula posando seriamente">
+<body>
+    <center><h1>Ana Paula Garfias</h1>
+    <img width="300px" max-height="300" src="Image\IMG_8451.jpg" alt="Paula posando seriamente"></center>
     <div>
         <h2>About me</h2>
         <p>Me considero una persona proactiva, con grandes interenses en seguirme preparando para el futuro, por ello he tomado cursos de SCRUM y AGILE para mejorar mis habilidades blandas en el trabajo y llevar una mejor organización del mismo. A la par tengo una gran afición por las tecnologías y su funcionalidad en el mundo actual por ello estoy estudiando y preparandome para desenvolverme como ingeniera software con amplios conocimientos en ciencia de datos.</p>
@@ -25,7 +26,7 @@
             <li>Project assignation and workload distribution. </li>
             <li>Support in external and internal audits. </li>
         </ul>
-            <i>Periodo: Dic 2022 - PRESENT</i>
+            <i>Period: Dic 2022 - PRESENT</i>
             <h3>BOSCH</h3>
         <h4>Work position:</h4>
             <p>Data access analyst</p>
@@ -37,7 +38,20 @@
             <li>Creation of mitigating controls to prevent improper use of access in purchasing departments, logistics, etc.</li>
             <li>Support the registration of applications developed locally.</li>
         </ul>
-            <i>Periodo: May 2021 - Dic 2022</i>
+            <i>Period: May 2021 - Dic 2022</i>
+    </div>
+    <hr>
+    <div>
+        <h2>Skills</h2>
+        <ul>
+            <li>ASPICE</li>
+            <li>MySQL</li>
+            <li>AutoCAD</li>
+            <li>IQ-RM</li>
+            <li>GIT</li>
+            <li>GitHub</li>
+            <li>Visual Studio Code</li>
+        </ul>
     </div>
     <hr>
     <div>
@@ -54,7 +68,6 @@
             </li>
         </ul>
     </div>
-<body>
-    
-</body>
+   <center><img width="300px" max-height="300" src="Image\bmd-4584.png" alt="Thanks"></center>
+</body> 
 </html>
