--- a/Paula_CV.html
+++ b/Paula_CV.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <center><h1>Ana Paula Garfias</h1>
-    <img width="300px" max-height="300" src="Image\IMG_8451.jpg" alt="Paula posando seriamente"></center>
+    <img width="300px" max-height="300" src="Image\IMG_8451.jpg" alt="Paula posando seriamente">
     <div>
-        <h2>About me</h2>
+        <h2>About me</h2></center>
         <p>Me considero una persona proactiva, con grandes interenses en seguirme preparando para el futuro, por ello he tomado cursos de SCRUM y AGILE para mejorar mis habilidades blandas en el trabajo y llevar una mejor organización del mismo. A la par tengo una gran afición por las tecnologías y su funcionalidad en el mundo actual por ello estoy estudiando y preparandome para desenvolverme como ingeniera software con amplios conocimientos en ciencia de datos.</p>
     </div>
     <hr>
