--- a/Paula_CV.html
+++ b/Paula_CV.html
@@ -60,13 +60,13 @@
         <h2>Contact</h2>
         <ul>
             <li>
-                <a href="https://www.linkedin.com/in/paulagarfias" target="_blank">Linkedin</a>
+                <a class="links" href="https://www.linkedin.com/in/paulagarfias" target="_blank">Linkedin</a>
             </li>
             <li>
-                <a href="https://www.instagram.com/paulagrfs_/" target="_blank">Instagram</a>
+                <a class="links" href="https://www.instagram.com/paulagrfs_/" target="_blank">Instagram</a>
             </li>
             <li>
-                <a href="https://github.com/anapaulagarfias" target="_blank">GitHub</a>
+                <a class="links" href="https://github.com/anapaulagarfias" target="_blank">GitHub</a>
             </li>
         </ul>
     </div>
