--- a/Paula_CV.html
+++ b/Paula_CV.html
@@ -70,6 +70,6 @@
             </li>
         </ul>
     </div>
-   <center><img width="300px" max-height="300" src="Image\bmd-4584.png" alt="Thanks"></center>
+   <center><img width="300px" max-height="300" src="https://media.istockphoto.com/vectors/cute-white-cat-or-kitten-with-big-eyes-thank-you-greeting-card-vector-id1073169748?k=6&m=1073169748&s=612x612&w=0&h=wIA6AN1800qESHdP0kI4g5znIBH-uJ0rkvFPXKK0cZk=" alt="Thanks"></center>
 </body> 
 </html>
