--- a/Paula_CV.html
+++ b/Paula_CV.html
@@ -10,7 +10,7 @@
     <div>
         <center>
             <h1>Ana Paula Garfias</h1>
-            <img width="300px" max-height="300" src="Image\IMG_8451.jpg" alt="Paula posando seriamente">
+            <img id="image1" width="300px" max-height="300" src="Image\IMG_8451.jpg" alt="Paula posando seriamente">
             <h2 id="me">About me</h2>
             <p>Me considero una persona proactiva, con grandes interenses en seguirme preparando para el futuro, por ello he tomado cursos de SCRUM y AGILE para mejorar mis habilidades blandas en el trabajo y llevar una mejor organización del mismo. A la par tengo una gran afición por las tecnologías y su funcionalidad en el mundo actual por ello estoy estudiando y preparandome para desenvolverme como ingeniera software con amplios conocimientos en ciencia de datos.</p>
         </center>
@@ -70,6 +70,6 @@
             </li>
         </ul>
     </div>
-   <center><img width="300px" max-height="300" src="https://media.istockphoto.com/vectors/cute-white-cat-or-kitten-with-big-eyes-thank-you-greeting-card-vector-id1073169748?k=6&m=1073169748&s=612x612&w=0&h=wIA6AN1800qESHdP0kI4g5znIBH-uJ0rkvFPXKK0cZk=" alt="Thanks"></center>
+   <center><img id="image2" width="300px" max-height="300" src="https://media.istockphoto.com/vectors/cute-white-cat-or-kitten-with-big-eyes-thank-you-greeting-card-vector-id1073169748?k=6&m=1073169748&s=612x612&w=0&h=wIA6AN1800qESHdP0kI4g5znIBH-uJ0rkvFPXKK0cZk=" alt="Thanks"></center>
 </body> 
 </html>
