--- a/Paula_CV.html
+++ b/Paula_CV.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/Styles/Style.css">
 </head>
 <body>
-    <div>
+    <div id="parte1">
         <center>
             <h1>Ana Paula Garfias</h1>
             <img id="image1" width="300px" max-height="300" src="Image\IMG_8451.jpg" alt="Paula posando seriamente">
@@ -29,7 +29,7 @@
             <li>Support in external and internal audits. </li>
         </ul>
             <i>Period: Dic 2022 - PRESENT</i>
-            <h3>BOSCH</h3>
+        <h3>BOSCH</h3>
         <h4>Work position:</h4>
             <p>Data access analyst</p>
         <h4>Tasks:</h4>
@@ -41,19 +41,24 @@
             <li>Support the registration of applications developed locally.</li>
         </ul>
             <i>Period: May 2021 - Dic 2022</i>
+        <h3>Continental</h3>
+        <h4>Work position:</h4>
+            <p>Intern of industrial engineering (IHM/IHW/IHP)</p>
+        <h4>Tasks:</h4>
+        <ul>
+            <li>Development and implementation of lean manufacturing tools.</li>
+            <li>Internal documents control.</li>
+            <li>Area distribution, POKA YOKE, 5’s, 8D’s, ISHIKAWA, KAIZEN, etc.</li>
+        </ul>
+            <i>Period: August 2019 – May 2020</i>    
     </div>
     <hr>
     <div>
-        <h2>Skills</h2>
-        <ul>
-            <li>ASPICE</li>
-            <li>MySQL</li>
-            <li>AutoCAD</li>
-            <li>IQ-RM</li>
-            <li>GIT</li>
-            <li>GitHub</li>
-            <li>Visual Studio Code</li>
-        </ul>
+        <h2>Education</h2>
+        <h3>Universidad de Guadalajara</h3>
+        <img width="100px" max-height="100" src="Image\udgimage.png" alt="Escudo de la Universidad de Guadalajara">
+        <h4>Industrial Engineering</h4>
+        <p>2016-2020</p>
     </div>
     <hr>
     <div>
@@ -68,7 +73,21 @@
             <li>
                 <a class="links" href="https://github.com/anapaulagarfias" target="_blank">GitHub</a>
             </li>
-        </ul>
+         </ul>
+    </div>
+    <hr>
+    <div>
+        <h2>Skills</h2>
+            <ul>
+                <li>ASPICE</li>
+                <li>MySQL</li>
+                <li>AutoCAD</li>
+                <li>IQ-RM</li>
+                <li>GIT</li>
+                <li>GitHub</li>
+                <li>Visual Studio Code</li>
+            </ul>
+        </div>
     </div>
    <center><img id="image2" width="300px" max-height="300" src="https://media.istockphoto.com/vectors/cute-white-cat-or-kitten-with-big-eyes-thank-you-greeting-card-vector-id1073169748?k=6&m=1073169748&s=612x612&w=0&h=wIA6AN1800qESHdP0kI4g5znIBH-uJ0rkvFPXKK0cZk=" alt="Thanks"></center>
 </body> 
