--- a/Paula_CV.html
+++ b/Paula_CV.html
@@ -17,7 +17,20 @@
     </div>
     <hr>
     <div>
-        <h2>Professional experience</h2>
+        <nav>
+            <h2>Índice</h2>
+                <ul>
+                    <li><a class="links" href="#professional_experience">Professional experience</a></li>
+                    <li><a class="links" href="#education">Education</a></li>
+                    <li><a class="links" href="#skills">Skills</a></li>
+                    <li><a class="links" href="#contact">Contact</a></li>
+                    <li><a class="links" href="#personal_contact">Personal contact with recluters</a></li>
+                    <li><a class="links" href="#blog">Blog</a></li>
+                </ul>
+            </nav>
+    </div>
+    <div>
+        <h2 id="professional_experience">Professional experience</h2>
         <h3>BOSCH</h3>
         <h4>Work position:</h4>
             <p>Jr Process Enginner</p>
@@ -54,28 +67,109 @@
     </div>
     <hr>
     <div>
-        <h2>Education</h2>
+        <h2 id="education">Education</h2>
         <h3>Universidad de Guadalajara</h3>
         <img width="100px" max-height="100" src="Image\udgimage.png" alt="Escudo de la Universidad de Guadalajara">
         <h4>Industrial Engineering</h4>
         <p>2016-2020</p>
+        <hr>
+        <h3>Generation México</h3>
+        <img width="100px" max-height="100" src="./Image/generation.png" alt="Logo de Generation México">
+        <h4>Java full stack jr.</h4>
+        <p>Dic 2023 - May 2024</p>
     </div>
     <hr>
     <div>
-        <h2>Skills</h2>
-            <ul>
-                <li>ASPICE</li>
-                <li>MySQL</li>
-                <li>AutoCAD</li>
-                <li>IQ-RM</li>
-                <li>GIT</li>
-                <li>GitHub</li>
-                <li>Visual Studio Code</li>
-            </ul>
+        <h2 id="skills">Skills</h2>
+        <table border="1">
+            <tr>
+                <th>Area</th>
+                <th>PMO</th>
+                <th>IE</th>
+                <th>Dev</th>
+            </tr>
+            <tr>
+                <td>ASPICE</td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+            </tr>
+            <tr>
+                <td>MySQL</td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td> 
+            </tr>
+            <tr>
+                <td>AutoCad</td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+            </tr>
+            <tr>
+                <td>GIT</td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+            </tr>
+            <tr>
+                <td>GitHub</td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+            </tr>
+            <tr>
+                <td>VSCode</td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+            </tr>
+            <tr>
+                <td>HTML</td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+            </tr>
+            <tr>
+                <td>IQ-RM</td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+            </tr>
+            <tr>
+                <td>ECR</td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+            </tr>
+            <tr>
+                <td>Java</td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+            </tr>
+            <tr>
+                <td>JavaScrip</td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+            </tr>
+            <tr>
+                <td>Agile</td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+            </tr><tr>
+                <td>Scrum</td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+                <td><input type="checkbox"></td>
+            </tr>
+        </table>
     </div>
     <hr>
     <div>
-        <h2>Contact</h2>
+        <h2 id="contact">Contact</h2>
         <ul>
             <li>
                 <a class="links" href="https://www.linkedin.com/in/paulagarfias" target="_blank">Linkedin</a>
@@ -86,7 +180,18 @@
             <li>
                 <a class="links" href="https://github.com/anapaulagarfias" target="_blank">GitHub</a>
             </li>
+            <li>
+                Celular: 4431697064
+            </li>
          </ul>
+    </div>
+    <hr>
+    <div>
+        <h2 id="personal_contact">Personal contact with recluters</h2>
+    </div>
+    <hr>
+    <div>
+        <h2 id="blog">Blog</h2>
     </div>
    <center><img id="image2" width="300px" max-height="300" src="https://media.istockphoto.com/vectors/cute-white-cat-or-kitten-with-big-eyes-thank-you-greeting-card-vector-id1073169748?k=6&m=1073169748&s=612x612&w=0&h=wIA6AN1800qESHdP0kI4g5znIBH-uJ0rkvFPXKK0cZk=" alt="Thanks"></center>
 </body> 
