--- a/Paula_CV.html
+++ b/Paula_CV.html
@@ -15,10 +15,9 @@
             <p>Me considero una persona proactiva, con grandes interenses en seguirme preparando para el futuro, por ello he tomado cursos de SCRUM y AGILE para mejorar mis habilidades blandas en el trabajo y llevar una mejor organización del mismo. A la par tengo una gran afición por las tecnologías y su funcionalidad en el mundo actual por ello estoy estudiando y preparandome para desenvolverme como ingeniera software con amplios conocimientos en ciencia de datos.</p>
         </center>
     </div>
-    <hr>
     <div>
         <nav>
-            <h2>Índice</h2>
+            <h2>Index</h2>
                 <ul>
                     <li><a class="links" href="#professional_experience">Professional experience</a></li>
                     <li><a class="links" href="#education">Education</a></li>
@@ -65,7 +64,6 @@
         </ul>
             <i>Period: August 2019 – May 2020</i>    
     </div>
-    <hr>
     <div>
         <h2 id="education">Education</h2>
         <h3>Universidad de Guadalajara</h3>
@@ -78,7 +76,6 @@
         <h4>Java full stack jr.</h4>
         <p>Dic 2023 - May 2024</p>
     </div>
-    <hr>
     <div>
         <h2 id="skills">Skills</h2>
         <table border="1">
@@ -167,7 +164,6 @@
             </tr>
         </table>
     </div>
-    <hr>
     <div>
         <h2 id="contact">Contact</h2>
         <ul>
@@ -185,14 +181,38 @@
             </li>
          </ul>
     </div>
-    <hr>
     <div>
         <h2 id="personal_contact">Personal contact with recluters</h2>
+        <form action="">
+            <label for="name-user">Name:</label>
+            <input type="text" id="name-user" placeholder="e.j. Paula" required>
+            <br>
+            <label for="lastname-user">Last name:</label>
+            <input type="text" id="lastname-user" placeholder="e.j. Garcia" required>
+            <br>
+            <label for="company">Company:</label>
+            <input type="text" id="company" placeholder="e.j. Bosch" required>
+            <br>
+            <label for="position">Job position:</label>
+            <input type="text" id="position" placeholder="Scrum Master" required>
+            <br>
+            <label for="email-usuario">E-mail:</label>
+            <input type="email" id="email-usuario" placeholder="paula@gmail.com" pattern="usuario@dominio.com" required>
+            <br>
+            <label for="information">Additional information:</label>
+            <input type="text" id="information">
+            <br>
+            <button type="submit">Send</button>
+        </form>
     </div>
-    <hr>
     <div>
         <h2 id="blog">Blog</h2>
     </div>
-   <center><img id="image2" width="300px" max-height="300" src="https://media.istockphoto.com/vectors/cute-white-cat-or-kitten-with-big-eyes-thank-you-greeting-card-vector-id1073169748?k=6&m=1073169748&s=612x612&w=0&h=wIA6AN1800qESHdP0kI4g5znIBH-uJ0rkvFPXKK0cZk=" alt="Thanks"></center>
+    <center>
+        <button id="button1"><a id="button1_index" href="#top">Index</a></button> 
+    </center>   
+    <center>
+        <img id="image2" width="300px" max-height="300" src="https://media.istockphoto.com/vectors/cute-white-cat-or-kitten-with-big-eyes-thank-you-greeting-card-vector-id1073169748?k=6&m=1073169748&s=612x612&w=0&h=wIA6AN1800qESHdP0kI4g5znIBH-uJ0rkvFPXKK0cZk=" alt="Thanks">
+    </center>
 </body> 
 </html>
