Añadí tablas para skills - Sexteavo commit

--- a/Paula_CV.html
+++ b/Paula_CV.html
@@ -78,6 +78,7 @@
     </div>
     <div>
         <h2 id="skills">Skills</h2>
+        <h3>Technical skills</h3>
         <table border="1">
             <tr>
                 <th>Area</th>
@@ -87,82 +88,84 @@
             </tr>
             <tr>
                 <td>ASPICE</td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" checked></td>
+                <td><input type="radio" disabled></td>
             </tr>
             <tr>
                 <td>MySQL</td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td> 
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" checked></td> 
             </tr>
             <tr>
                 <td>AutoCad</td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" checked></td>
+                <td><input type="radio" disabled></td>
             </tr>
             <tr>
                 <td>GIT</td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" checked></td>
             </tr>
             <tr>
                 <td>GitHub</td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" checked></td>
             </tr>
             <tr>
                 <td>VSCode</td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" checked></td>
             </tr>
             <tr>
                 <td>HTML</td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" checked></td>
             </tr>
             <tr>
                 <td>IQ-RM</td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" checked></td>
+                <td><input type="radio" disabled></td>
             </tr>
             <tr>
                 <td>ECR</td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
+                <td><input type="radio" checked></td>
+                <td><input type="radio" checked></td>
+                <td><input type="radio" disabled></td>
             </tr>
             <tr>
                 <td>Java</td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" checked></td>
             </tr>
             <tr>
                 <td>JavaScrip</td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" disabled></td>
+                <td><input type="radio" checked></td>
             </tr>
             <tr>
                 <td>Agile</td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
+                <td><input type="radio" checked></td>
+                <td><input type="radio" checked></td>
+                <td><input type="radio" checked></td>
             </tr><tr>
                 <td>Scrum</td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
-                <td><input type="checkbox"></td>
+                <td><input type="radio" checked></td>
+                <td><input type="radio" checked></td>
+                <td><input type="radio" checked></td>
             </tr>
         </table>
+        <h3>Languages</h3>
+
     </div>
     <div>
         <h2 id="contact">Contact</h2>
